--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: Mushus/golangci-linter@v1
+    - name: Lint
     - uses: actions/checkout@master
     - name: Publish to Docker Repository
       uses: labbsr0x/kafka2influxdb@master
