--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,19 @@ services:
       - INFLUXDB_PASSWORD=interactws
       - INFLUXDB_HTTP_AUTH_ENABLED=true
 
+  schema-registry:
+    image: confluentinc/cp-schema-registry:5.3.1
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+        - zookeeper
+        - kafka
+    ports:
+        - "8081:8081"
+    environment:
+        SCHEMA_REGISTRY_HOST_NAME: schema-registry
+        SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
+
   kafka2influxdb:
     image: labbsr0x/kafka2influxdb
     build: .
@@ -43,12 +56,14 @@ services:
       - zookeeper
       - kafka
       - influxdb
+      - schema-registry
     ports:
       - 8000:8000
     environment: 
       - KFK2INF_PORT=8000
       - KFK2INF_KAFKA_ADDR=kafka:29092
       - KFK2INF_KAFKA_TOPIC=owner
+      - KFK2INF_KAFKA_SCHEMA_REGISTRY=schema-registry:8081
       - KFK2INF_INFLUXDB_ADDR=http://influxdb:8086
       - KFK2INF_INFLUXDB_NAME=interactws
       - KFK2INF_INFLUXDB_USER=interactws-admin
